# mcpo-watcher

./: .env  .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: controller.py  main.py  models.py  validator.py  watcher.py
